--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ main
 
 #heading
 {
-    font-family: 'Baloo Bhai 2', cursive;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     color: rgb(255, 255, 255);
     font-size: 3rem;
